--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+html {
+    margin: 0;
+    min-height: 100%;
+}
+
 body{
     margin:0;
+    height: 100%;
     font-family: roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 .header{
     background-color: #1F2937;
@@ -68,7 +76,7 @@ a:hover{
 }
 
 .Image{
-    background-color: grey;
+    
 }
 .info-head{
     text-align: center;
@@ -90,12 +98,11 @@ a:hover{
     font-size: 12px;
     width:100px;
     text-align: center;
-  
     
 }
 
 .third .img{
-    height:100px;
+    height: 100px;
     border: 2px solid;
     border-radius: 10px;
     border-color: #3882F6;
@@ -105,7 +112,7 @@ a:hover{
     display: flex;
     flex-direction: column;
     background-color: #E5E7EB;
-    padding:30px 90px;
+    padding:60px 90px;
 }
 
 .fourth .quote{
@@ -146,8 +153,8 @@ a:hover{
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 12px;
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .fifth .sign-up{
